docs/style.css
* {
	margin: 0;
	padding: 0;
	border: 0;
	outline: none;
	box-sizing: border-box;
	background: transparent;
	font-family: inherit;
}

a {
	text-decoration: none;
}

a img {
	border: none;
}

button,
a {
	cursor: pointer;
	color: inherit;
}  

textarea {
	resize: none;
}

button,
textarea,
select {
	appearance: none !important;
	border-radius: 0;
}

/* RESET OVER */

/* COLORS */
:root {
	--primary-color: #f8f7f3;
	--secondary-color: #1a24fb;
}

/* COLORS OVER */


body {
    font-family: 'Montserrat', sans-serif;
    font-family: 'Overpass', sans-serif;
    color: var(--secondary-color);
	background: var(--primary-color);
}


/* TEXT */

h2 {
	font-size: 12px;
	font-weight: 400;
    letter-spacing: 0.2em;
    text-transform: uppercase;
    font-family: 'Overpass', sans-serif;
    color: var(--primary-color);
}

h3 {
	font-size: 36px;
	line-height: 44px;
	font-weight: 700;
    color: var(--secondary-color);
    padding-bottom: 20px;
}

h4 {
	font-size: 12px;
	line-height: 24px;
	font-weight: 400;
    letter-spacing: 0.2em;
    color: var(--secondary-color);
    text-transform: uppercase;
    padding-bottom: 10px;
}

p {
	font-weight: 400;
	font-size: 16px;
	line-height: 22px;
    color: var(--secondary-color);
    font-family: 'Overpass', sans-serif;
}

/* TEXT OVER */


.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 700,
  'GRAD' 0,
  'opsz' 48;
  font-size: 24px;
  color: var(--primary-color);
}

.header {
	position: fixed;
	top: 0;
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 100%;
	height: 40px;
	padding: 0 10px;
	border-bottom: 1px solid var(--secondary-color);
	z-index: 99;
	background-color: var(--secondary-color);
}

.main {
	max-width: 1280px;
	margin: 0 auto;
	/* padding-top: 60px; */
}

.section-books {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 100px 20px;
    margin: 120px auto;
}

.book-card {
    
    /* color: var(--primary-color); */
    max-width: 450px;
    min-width: 350px;
}

.book-card-bordered {
    position: relative;
	background-color: var(--primary-color);
    border: 1px solid var(--secondary-color);
    min-height: 435px;
    max-width: 450px;
    padding: 40px;
    margin: 0 auto;
}


.book-number {
	position: absolute;
	top: 0px;
	right: 0px;
	width: 40px;
	height: 40px;
	background-color: var(--primary-color);
	color: var(--secondary-color);
	font-size: 24px;
	line-height: 40px;
	text-align: center;
    font-weight: 700; 
}

.book-info {
	width: calc(100% - 80px);
	position: absolute;
	top: 40px;
}

.button-details {
	position: relative;
}

.button-details:hover {
	position: absolute;
}

.button-text {
	position: relative;
	font-size: 14px;
	line-height: 50px;
}

.button-icon {
	position: absolute;
    right: 0;
}

